Fixed alignments of forms

--- a/index.css
+++ b/index.css
@@ -119,10 +119,6 @@ form {
     display: inline-block;
 }
 
-form input {
-    
-}
-
 .formlabel {
     float: right;
     padding-right: 10px;
